Add Mastodon link and verification.

--- a/index.html
+++ b/index.html
@@ -2046,7 +2046,9 @@ year = {2019},
 
   </main>
   <footer>
-    <small>Asta Halkjær From</small>
+    <small>Asta Halkjær From.
+      Find me on <a href="https://types.pl/@ahfrom" rel="me">Mastodon</a>.
+    </small>
   </footer>
 </body>
 
