--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </dt>
           <dd>Thirteenth Conference on Interactive Theorem Proving (ITP 2022), Haifa, Israel.</dd>
           <dt><a href="slides/isaworkshop2022.pdf">On Termination for Hybrid Tableaux</a></dt>
-          <dd>the Isabelle Workshop 2022, Haifa, Israel.</dd>
+          <dd>Isabelle Workshop 2022, Haifa, Israel.</dd>
           <dt><a href="slides/wollic2021.pdf">Formalized Soundness and Completeness of Epistemic Logic</a></dt>
           <dd>27th Workshop on Logic, Language, Information and Computation (WoLLIC 2021), virtual.</dd>
           <dt><a href="slides/cicm2021.pdf">Formalizing Axiomatic Systems for Propositional Logic in Isabelle/HOL</a>
