Spell out authors et al.

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@ year = {2022},
 
             <dt><b>Interactive Theorem Proving for Logic and Information</b></dt>
             <dd>
-              Jørgen Villadsen et al.
+              Jørgen Villadsen, Asta Halkjær From, Alexander Birch Jensen and Anders Schlichtkrull.
 
               In R. Loukanova (ed.)
               <i>Natural Language Processing in Artificial Intelligence --- NLPinAI 2021</i>,
@@ -1028,7 +1028,7 @@ year = {2020},
 
             <dt><b>Teaching a Formalized Logical Calculus</b></dt>
             <dd>
-              Asta Halkjær From et al.
+              Asta Halkjær From, Alexander Birch Jensen, Anders Schlichtkrull and Jørgen Villadsen.
 
               In P. Quaresma, W. Neuper and J. Marcos (ed.)
               <i>Proceedings 8th International Workshop on Theorem Proving Components for Educational Software,
@@ -1222,7 +1222,7 @@ year = {2018},
 
             <dt><b>Multi-Agent Programming Contest 2016 --- The Python-DTU Team</b></dt>
             <dd>
-              Jørgen Villadsen et al.
+              Jørgen Villadsen, Asta Halkjær From, Salvador Jacobi and Nikolaj Nøkkentved Larsen.
 
               <i>International Journal of Agent-Oriented Software Engineering 6(1)</i>,
               pp. 86--100,
@@ -1256,7 +1256,7 @@ year = {2018},
 
             <dt><b>Multi-Agent Programming Contest 2018 --- The Jason-DTU Team</b></dt>
             <dd>
-              Jørgen Villadsen et al.
+              Jørgen Villadsen, Mads Okholm Bjørn, Asta Halkjær From, Thomas Søren Henney and John Bruntse Larsen.
 
               In T. Ahlbrecht, J. Dix and N. Fiekas (ed.)
               <i>The Multi-Agent Programming Contest 2018 --- Agents Teaming Up in an Urban Environment</i>,
@@ -1592,7 +1592,7 @@ year = {2018},
 
             <dt><b>Substitutionless First-Order Logic: A Formal Soundness Proof</b></dt>
             <dd>
-              Asta Halkjær From et al.
+              Asta Halkjær From, John Bruntse Larsen, Anders Schlichtkrull and Jørgen Villadsen.
 
               <i>Isabelle Workshop 2018.</i>, 2018.
 
