--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <dt><a href="slides/ijcar2020.pdf">Formalizing a Seligman-Style Tableau System for Hybrid Logic</a></dt>
           <dd>International Joint Conference on Automated Reasoning (IJCAR 2020), virtual.</dd>
           <dt><a href="slides/isaworkshop2020.pdf">A Concise Sequent Calculus for Teaching First-Order Logic</a></dt>
-          <dd>the Isabelle Workshop 2020, virtual.</dd>
+          <dd>Isabelle Workshop 2020, virtual.</dd>
           <dt><a href="slides/ruc-prior2019.pdf">Using the Isabelle Proof Assistant: Seligman-Style Tableau for Hybrid
               Logic</a></dt>
           <dd>The LogicS of Prior Past, Present, and Future 2019, Roskilde University, Denmark.</dd>
