--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
     <section>
       <h2>About me</h2>
       <p>
-        I will be defending my PhD thesis in April 2023.
         I was a PhD student at DTU Compute from February 2020 to February 2023 working on <em>Formally Correct
           Deduction
           Methods for Computational Logic</em>, especially using the proof assistant Isabelle/HOL. My supervisor was
@@ -159,6 +158,7 @@
         <dt><a href="files/ahfrom-thesis.pdf">PhD Thesis</a></dt>
         <dd><i>Formally Correct Deduction Methods for Computational Logic.</i>
           Supervised by Jørgen Villadsen and Nina Gierasimczuk.
+          <a href="slides/phd-defence.pdf">Slides</a>.
         </dd>
         <dt><a href="files/ahfrom-MSc-thesis.pdf">MSc Thesis</a></dt>
         <dd><i>Hybrid Logic.</i>
