Update CV and publications.

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
               <i>Journal of Automated Reasoning</i>,
 
-              <i>under submission,</i>
+              <i>Under submission,</i>
               2023.
 
 
@@ -225,7 +225,7 @@ year = {2023},
               <i>Journal of Logic and Computation --- Special Issue from the 27th Workshop on Logic, Language,
                 Information and Computation (WoLLIC 2021)</i>,
 
-              <i>accepted for publication,</i>
+              <i>Accepted for publication,</i>
               2022.
 
 
@@ -255,44 +255,6 @@ journal = {Journal of Logic and Computation --- Special Issue from the 27th Work
 note = {Accepted for publication},
 published = {Oxford University Press},
 title = {Formalized Soundness and Completeness of Epistemic and Public Announcement Logic},
-year = {2022},
-}</pre>
-              </details>
-            </dd>
-
-            <dt><b>A Sequent Calculus for First-Order Logic Formalized in Isabelle/HOL</b></dt>
-            <dd>
-              Asta Halkjær From, Anders Schlichtkrull and Jørgen Villadsen.
-
-              <i>Journal of Logic and Computation --- Special Issue from the 36th Italian Conference on Computational
-                Logic (CILC 2021)</i>,
-
-              <i>accepted for publication,</i>
-              2022.
-
-
-
-
-              <details>
-                <summary>Abstract.</summary>
-                <p>We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for
-                  first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose
-                  completeness proof we base on the theory entry ``First-Order Logic According to Fitting'' by Berghofer
-                  in the Archive of Formal Proofs (AFP). The calculi and proof techniques are taken from Ben-Ari's
-                  textbook Mathematical Logic for Computer Science (Springer 2012). We thereby demonstrate that
-                  Berghofer's approach works not only for natural deduction but constitutes a framework for
-                  mechanically-checked completeness proofs for a range of proof systems.</p>
-              </details>
-
-              <details>
-                <summary>BibTeX.</summary>
-                <pre>@article{FromSV21,
-abstract = {We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose completeness proof we base on the theory entry ``First-Order Logic According to Fitting'' by Berghofer in the Archive of Formal Proofs (AFP). The calculi and proof techniques are taken from Ben-Ari's textbook Mathematical Logic for Computer Science (Springer 2012). We thereby demonstrate that Berghofer's approach works not only for natural deduction but constitutes a framework for mechanically-checked completeness proofs for a range of proof systems.},
-author = {Asta Halkj{æ}r From and Anders Schlichtkrull and J{ø}rgen Villadsen},
-journal = {Journal of Logic and Computation --- Special Issue from the 36th Italian Conference on Computational Logic {(CILC} 2021)},
-note = {Accepted for publication},
-published = {Oxford University Press},
-title = {A Sequent Calculus for First-Order Logic Formalized in Isabelle/HOL},
 year = {2022},
 }</pre>
               </details>
@@ -328,7 +290,7 @@ abstract = {I formalize a Henkin-style completeness proof for an axiomatic syste
 author = {Asta Halkj{æ}r From},
 booktitle = {Web Summer School in Logic, Language, and Information - {ESSLLI} 2020 Student Session, Brandeis University, USA, July 11-17, 2020, Selected Papers 2019-2020},
 editor = {Alexandra Pavlova and Mina Young Pedersen},
-note = {accepted for publication},
+note = {Accepted for publication},
 publisher = {Springer},
 series = {Lecture Notes in Computer Science},
 title = {Formalizing Henkin-Style Completeness of an Axiomatic System for Propositional Logic},
@@ -344,6 +306,45 @@ year = {2020},
         <h3>Publications</h3>
         <div>
           <dl>
+
+            <dt><b>A sequent calculus for first-order logic formalized in Isabelle/HOL</b></dt>
+            <dd>
+              Asta Halkjær From, Anders Schlichtkrull and Jørgen Villadsen.
+
+              <i>Journal of Logic and Computation</i>,
+
+
+              2023.
+
+              DOI: <a href="https://doi.org/10.1093/logcom/exad013">10.1093/logcom/exad013</a>.
+
+
+              <details>
+                <summary>Abstract.</summary>
+                <p>We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for
+                  first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose
+                  completeness proof we base on the theory entry ‘First-Order Logic According to Fitting’ by Berghofer
+                  in the Archive of Formal Proofs. The calculi and proof techniques are taken from Ben-Ari’s textbook
+                  Mathematical Logic for Computer Science (Springer, 2012). We thereby demonstrate that Berghofer’s
+                  approach works not only for natural deduction but also constitutes a framework for mechanically
+                  checked completeness proofs for a range of proof systems.</p>
+              </details>
+
+              <details>
+                <summary>BibTeX.</summary>
+                <pre>@article{FromSV23,
+abstract = {{We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose completeness proof we base on the theory entry ‘First-Order Logic According to Fitting’ by Berghofer in the Archive of Formal Proofs. The calculi and proof techniques are taken from Ben-Ari’s textbook Mathematical Logic for Computer Science (Springer, 2012). We thereby demonstrate that Berghofer’s approach works not only for natural deduction but also constitutes a framework for mechanically checked completeness proofs for a range of proof systems.}},
+author = {From, Asta Halkjær and Schlichtkrull, Anders and Villadsen, Jørgen},
+doi = {10.1093/logcom/exad013},
+eprint = {https://academic.oup.com/logcom/advance-article-pdf/doi/10.1093/logcom/exad013/50135733/exad013.pdf},
+issn = {0955-792X},
+journal = {Journal of Logic and Computation},
+month = {04},
+title = {{A sequent calculus for first-order logic formalized in Isabelle/HOL}},
+year = {2023},
+}</pre>
+              </details>
+            </dd>
 
             <dt><b>More Formalized Axiomatic Systems for Propositional Logic in Isabelle/HOL</b></dt>
             <dd>
