Update Mastodon link.

--- a/index.html
+++ b/index.html
@@ -2041,7 +2041,7 @@ year = {2019},
   </main>
   <footer>
     <small>Asta Halkjær From.
-      Find me on <a href="https://types.pl/@ahfrom" rel="me">Mastodon</a>.
+      Find me at <a href="https://inductive.space/@ahfrom" rel="me">@ahfrom@inductive.space</a>.
     </small>
   </footer>
 </body>
