Add Tableaux publication.

--- a/index.html
+++ b/index.html
@@ -307,6 +307,40 @@ year = {2020},
         <div>
           <dl>
 
+            <dt><b>A Naive Prover for First-Order Logic: A Minimal Example of Analytic Completeness</b></dt>
+            <dd>
+              Asta Halkjær From and Jørgen Villadsen.
+
+              In R. Ramanayake and J. Urban (ed.)
+              <i>Automated Reasoning with Analytic Tableaux and Related Methods - 32nd International Conference,
+                TABLEAUX 2023, Prague, Czech Republic, September 18-21, 2023, Proceedings</i>,
+              Lecture Notes in Computer Science 14278,
+              pp. 468--480,
+              Springer,
+
+              2023.
+
+              DOI: <a href="https://doi.org/10.1007/978-3-031-43513-3_25">10.1007&#x2F;978-3-031-43513-3_25</a>.
+
+
+
+              <details>
+                <summary>BibTeX.</summary>
+                <pre>@inproceedings{FromV23,
+author = {Asta Halkj{æ}r From and J{ø}rgen Villadsen},
+booktitle = {Automated Reasoning with Analytic Tableaux and Related Methods - 32nd International Conference, {TABLEAUX} 2023, Prague, Czech Republic, September 18-21, 2023, Proceedings},
+doi = {10.1007&#x2F;978-3-031-43513-3_25},
+editor = {Revantha Ramanayake and Josef Urban},
+pages = {468--480},
+publisher = {Springer},
+series = {Lecture Notes in Computer Science},
+title = {A Naive Prover for First-Order Logic: {A} Minimal Example of Analytic Completeness},
+volume = {14278},
+year = {2023},
+}</pre>
+              </details>
+            </dd>
+
             <dt><b>A sequent calculus for first-order logic formalized in Isabelle/HOL</b></dt>
             <dd>
               Asta Halkjær From, Anders Schlichtkrull and Jørgen Villadsen.
