--- a/index.html
+++ b/index.html
@@ -341,40 +341,29 @@ year = {2023},
               </details>
             </dd>
 
-            <dt><b>A sequent calculus for first-order logic formalized in Isabelle/HOL</b></dt>
+            <dt><b>A sequent calculus for first-order logic formalized in Isabelle&#x2F;HOL</b></dt>
             <dd>
               Asta Halkjær From, Anders Schlichtkrull and Jørgen Villadsen.
 
-              <i>Journal of Logic and Computation</i>,
-
+              <i>Journal of Logic and Computation 33(4)</i>,
+              pp. 818--836,
 
               2023.
 
-              DOI: <a href="https://doi.org/10.1093/logcom/exad013">10.1093/logcom/exad013</a>.
+              DOI: <a href="https://doi.org/10.1093/logcom/exad013">10.1093&#x2F;logcom&#x2F;exad013</a>.
 
 
-              <details>
-                <summary>Abstract.</summary>
-                <p>We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for
-                  first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose
-                  completeness proof we base on the theory entry ‘First-Order Logic According to Fitting’ by Berghofer
-                  in the Archive of Formal Proofs. The calculi and proof techniques are taken from Ben-Ari’s textbook
-                  Mathematical Logic for Computer Science (Springer, 2012). We thereby demonstrate that Berghofer’s
-                  approach works not only for natural deduction but also constitutes a framework for mechanically
-                  checked completeness proofs for a range of proof systems.</p>
-              </details>
 
               <details>
                 <summary>BibTeX.</summary>
                 <pre>@article{FromSV23,
-abstract = {{We formalize in Isabelle/HOL soundness and completeness of a one-sided sequent calculus for first-order logic. The completeness is shown via a translation from a semantic tableau calculus, whose completeness proof we base on the theory entry ‘First-Order Logic According to Fitting’ by Berghofer in the Archive of Formal Proofs. The calculi and proof techniques are taken from Ben-Ari’s textbook Mathematical Logic for Computer Science (Springer, 2012). We thereby demonstrate that Berghofer’s approach works not only for natural deduction but also constitutes a framework for mechanically checked completeness proofs for a range of proof systems.}},
-author = {From, Asta Halkjær and Schlichtkrull, Anders and Villadsen, Jørgen},
-doi = {10.1093/logcom/exad013},
-eprint = {https://academic.oup.com/logcom/advance-article-pdf/doi/10.1093/logcom/exad013/50135733/exad013.pdf},
-issn = {0955-792X},
+author = {Asta Halkj{æ}r From and Anders Schlichtkrull and J{ø}rgen Villadsen},
+doi = {10.1093&#x2F;logcom&#x2F;exad013},
 journal = {Journal of Logic and Computation},
-month = {04},
-title = {{A sequent calculus for first-order logic formalized in Isabelle/HOL}},
+number = {4},
+pages = {818--836},
+title = {A sequent calculus for first-order logic formalized in {Isabelle&#x2F;HOL}},
+volume = {33},
 year = {2023},
 }</pre>
               </details>
