Add underlines to links and more content.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       vertical-align: bottom;
       display: inline-block;
     }
+
+    a {
+      text-decoration: underline;
+    }
+
+    a:focus,
+    a:hover {
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -53,14 +62,20 @@
     <section>
       <h2>About me</h2>
       <p>
+        I am currently employed as a full-stack software developer at Dalux.
+      </p>
+      <p>
         I was a PhD student at DTU Compute from February 2020 to February 2023 working on <em>Formally Correct
           Deduction
           Methods for Computational Logic</em>, especially using the proof assistant Isabelle/HOL. My supervisor was
         Jørgen
         Villadsen and my co-supervisor was Nina Gierasimczuk.
+        DTU granted me a Young Researcher Award for my PhD.
+      </p>
+      <p>
         Before that, I was a MSc student on the Honours Programme in Computer Science and Engineering at DTU from 2018
         to
-        2020.
+        2020 and a BSc student in software technology at DTU from 2014 to 2018.
       </p>
     </section>
 
@@ -2063,9 +2078,7 @@ year = {2019},
 
   </main>
   <footer>
-    <small>Asta Halkjær From.
-      Find me at <a href="https://inductive.space/@ahfrom" rel="me">@ahfrom@inductive.space</a>.
-    </small>
+    <small>Asta Halkjær From.</small>
   </footer>
 </body>
 
