--- a/index.html
+++ b/index.html
@@ -275,45 +275,6 @@ year = {2022},
               </details>
             </dd>
 
-            <dt><b>Formalizing Henkin-Style Completeness of an Axiomatic System for Propositional Logic</b></dt>
-            <dd>
-              Asta Halkjær From.
-
-              In A. Pavlova and M. Y. Pedersen (ed.)
-              <i>Web Summer School in Logic, Language, and Information - ESSLLI 2020 Student Session, Brandeis
-                University, USA, July 11-17, 2020, Selected Papers 2019-2020</i>,
-              Lecture Notes in Computer Science,
-
-              Springer,
-              <i>Accepted for publication,</i>
-              2020.
-
-
-
-
-              <details>
-                <summary>Abstract.</summary>
-                <p>I formalize a Henkin-style completeness proof for an axiomatic system for propositional logic in the
-                  proof assistant Isabelle/HOL. The formalization precisely details the structure of this proof method.
-                </p>
-              </details>
-
-              <details>
-                <summary>BibTeX.</summary>
-                <pre>@inproceedings{From20,
-abstract = {I formalize a Henkin-style completeness proof for an axiomatic system for propositional logic in the proof assistant Isabelle/HOL.  The formalization precisely details the structure of this proof method.},
-author = {Asta Halkj{æ}r From},
-booktitle = {Web Summer School in Logic, Language, and Information - {ESSLLI} 2020 Student Session, Brandeis University, USA, July 11-17, 2020, Selected Papers 2019-2020},
-editor = {Alexandra Pavlova and Mina Young Pedersen},
-note = {Accepted for publication},
-publisher = {Springer},
-series = {Lecture Notes in Computer Science},
-title = {Formalizing Henkin-Style Completeness of an Axiomatic System for Propositional Logic},
-year = {2020},
-}</pre>
-              </details>
-            </dd>
-
           </dl>
         </div>
       </section>
@@ -335,7 +296,7 @@ year = {2020},
 
               2023.
 
-              DOI: <a href="https://doi.org/10.1007/978-3-031-43513-3_25">10.1007&#x2F;978-3-031-43513-3_25</a>.
+              DOI: <a href="https://doi.org/10.1007/978-3-031-43513-3_25">10.1007/978-3-031-43513-3_25</a>.
 
 
 
@@ -344,7 +305,7 @@ year = {2020},
                 <pre>@inproceedings{FromV23,
 author = {Asta Halkj{æ}r From and J{ø}rgen Villadsen},
 booktitle = {Automated Reasoning with Analytic Tableaux and Related Methods - 32nd International Conference, {TABLEAUX} 2023, Prague, Czech Republic, September 18-21, 2023, Proceedings},
-doi = {10.1007&#x2F;978-3-031-43513-3_25},
+doi = {10.1007/978-3-031-43513-3_25},
 editor = {Revantha Ramanayake and Josef Urban},
 pages = {468--480},
 publisher = {Springer},
@@ -356,7 +317,7 @@ year = {2023},
               </details>
             </dd>
 
-            <dt><b>A sequent calculus for first-order logic formalized in Isabelle&#x2F;HOL</b></dt>
+            <dt><b>A sequent calculus for first-order logic formalized in Isabelle/HOL</b></dt>
             <dd>
               Asta Halkjær From, Anders Schlichtkrull and Jørgen Villadsen.
 
@@ -365,7 +326,7 @@ year = {2023},
 
               2023.
 
-              DOI: <a href="https://doi.org/10.1093/logcom/exad013">10.1093&#x2F;logcom&#x2F;exad013</a>.
+              DOI: <a href="https://doi.org/10.1093/logcom/exad013">10.1093/logcom/exad013</a>.
 
 
 
@@ -373,11 +334,11 @@ year = {2023},
                 <summary>BibTeX.</summary>
                 <pre>@article{FromSV23,
 author = {Asta Halkj{æ}r From and Anders Schlichtkrull and J{ø}rgen Villadsen},
-doi = {10.1093&#x2F;logcom&#x2F;exad013},
+doi = {10.1093/logcom/exad013},
 journal = {Journal of Logic and Computation},
 number = {4},
 pages = {818--836},
-title = {A sequent calculus for first-order logic formalized in {Isabelle&#x2F;HOL}},
+title = {A sequent calculus for first-order logic formalized in {Isabelle/HOL}},
 volume = {33},
 year = {2023},
 }</pre>
@@ -705,6 +666,47 @@ publisher = {Springer},
 series = {Lecture Notes in Computer Science},
 title = {Formalized Soundness and Completeness of Epistemic Logic},
 volume = {13038},
+year = {2021},
+}</pre>
+              </details>
+            </dd>
+
+            <dt><b>Formalizing Henkin-Style Completeness of an Axiomatic System for Propositional Logic</b></dt>
+            <dd>
+              Asta Halkjær From.
+
+              In A. Pavlova, M. Y. Pedersen and R. Bernardi (ed.)
+              <i>Selected Reflections in Language, Logic, and Information - ESSLLI 2019, ESSLLI 2020 and ESSLLI 2021
+                Student Sessions, Selected Papers</i>,
+              Lecture Notes in Computer Science 14354,
+              pp. 80--92,
+              Springer,
+
+              2021.
+
+              DOI: <a href="https://doi.org/10.1007/978-3-031-50628-4_5">10.1007/978-3-031-50628-4_5</a>.
+
+
+              <details>
+                <summary>Abstract.</summary>
+                <p>I formalize a Henkin-style completeness proof for an axiomatic system for propositional logic in the
+                  proof assistant Isabelle/HOL. The formalization precisely details the structure of this proof method.
+                </p>
+              </details>
+
+              <details>
+                <summary>BibTeX.</summary>
+                <pre>@inproceedings{From21-ESSLLI,
+abstract = {I formalize a Henkin-style completeness proof for an axiomatic system for propositional logic in the proof assistant Isabelle/HOL. The formalization precisely details the structure of this proof method.},
+author = {Asta Halkj{æ}r From},
+booktitle = {Selected Reflections in Language, Logic, and Information - {ESSLLI} 2019, {ESSLLI} 2020 and {ESSLLI} 2021 Student Sessions, Selected Papers},
+doi = {10.1007/978-3-031-50628-4_5},
+editor = {Alexandra Pavlova and Mina Young Pedersen and Raffaella Bernardi},
+pages = {80--92},
+publisher = {Springer},
+series = {Lecture Notes in Computer Science},
+title = {Formalizing Henkin-Style Completeness of an Axiomatic System for Propositional Logic},
+volume = {14354},
 year = {2021},
 }</pre>
               </details>
@@ -2078,7 +2080,7 @@ year = {2019},
 
   </main>
   <footer>
-    <small>Asta Halkjær From.</small>
+    <small>Asta Halkjær From</small>
   </footer>
 </body>
 
