--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <dt><a href="slides/naive-lsd.pdf">A Naive Prover for First-Order Logic</a></dt>
           <dd>The Languages, Systems, and Data Seminar (LSD spring 2022). Invited by Lindsey Kuper (UC Santa Cruz),
             virtual.</dd>
-          <dt><a href="slides/phd-journey.pdf">My PhD Journey</a></dt>
+          <dt>My PhD Journey</dt>
           <dd>Kick-off event for new PhD students, fall 2021. Invited by Kim Knudsen, Head of PhD School, DTU Compute.
             Comwell Hotel, Holte.</dd>
         </dl>
@@ -201,7 +201,7 @@
 
               <i>Journal of Automated Reasoning</i>,
 
-              <i>Under submission,</i>
+              <i>Accepted for publication,</i>
               2023.
 
 
